# django-query-profiler

./: .coveralls.yml  .gitignore  .travis.yml  =1.3.13  =2.5.4  INTERNALS.md  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  runTests.py  runtests.py  setup.cfg  setup.py  tox.ini
django_query_profiler/: settings.py
django_query_profiler/chrome_plugin/: README.md  devtools.js  manifest.json  panel_controls.js  panel_table.css  panel_table.html
django_query_profiler/chrome_plugin_helpers/: README.md  __init__.py  redis_utils.py  views.py
django_query_profiler/client/: INTERNALS.md  README.md  context_manager.py  middleware.py  urls.py
django_query_profiler/django/: INTERNALS.md  README.md
django_query_profiler/django/db/backends/: cursor_wrapper_instrumentation.py  database_wrapper_mixin.py
django_query_profiler/django/db/backends/mysql/: base.py
django_query_profiler/django/db/backends/oracle/: base.py
django_query_profiler/django/db/backends/postgresql/: base.py
django_query_profiler/django/db/backends/sqlite3/: base.py
django_query_profiler/query_profiler_storage/: __init__.py  data_collector.py  data_storage.py  django_stack_trace_analyze.py  stack_tracer.py
django_query_profiler/query_signature/: INTERNALS.md  __init__.py  data_storage.py  query_signature_analyze.py  stack_tracer.py
django_query_profiler/templates/: django_query_profiler_level_query.html  django_query_profiler_level_query_signature.html  query_profiled_data.html  query_signature_profiled_data.html
django_query_profiler/tests/: test_query_signature_analyze.py  test_stack_tracer.py
docs/source/: choosing_profiler_level.rst  chrome_plugin_columns.rst  chromium_plugin_columns.rst  conf.py  configuration_instructions.rst  customizing_defaults.rst  how_it_works.rst  index.rst  installation.rst  running_tests.rst
tests/: README.rst  test_data_storage.py  test_query_profiled_data.py  test_query_signature_analyze.py  test_stack_tracer.py
tests/integration/: fixtures.py  models.py  test_data_collector_nesting.py  test_django_stack_trace_analyze.py  test_middleware.py  test_query_count.py  test_query_profiler.py  test_query_signature_analyze.py  test_settings.py
tests/integration/setup/: test_settings.py
tests/testapp/: apps.py  mysql_settings.py  oracle_settings.py  postgis_settings.py  postgres_settings.py  postgresql_settings.py  sqlite_settings.py  urls.py  views.py
tests/testapp/food/: apps.py  models.py  views.py
tests/unit/: test_data_storage.py  test_middleware.py  test_number_formatter.py  test_query_profiled_data.py  test_query_signature_analyze.py  test_sql_statement_type_from_sql.py  test_stack_tracer.py
