[metadata]
name = django-query-profiler
version = 0.1
description = Django query profiler
long_description = file: README.md
url = https://github.com/django-query-profiler/django-query-profiler
author = Yash Maheshwari, Glynn Morrison
author_email = yash.maheshwari@gmail.com, glynn@zenefits.com, django.query.profiler@gmail.com
license = BSD-3-Clause
classifiers =
    'Development Status :: 4 - Alpha'
    'Environment :: Web Environment'
    'Framework :: Django'
    'Framework :: Django :: 1.11'
    'Framework :: Django :: 2.1'
    'Framework :: Django :: 2.2'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: BSD License'
    'Operating System :: OS Independent'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'
    'Topic :: Utilities'

[options]
include_package_data = true
packages = find:
zip_safe = false
test_suite = runtests.run_tests
setup_requires = flake8
install_requires =
    django
    moz-sql-parser
    redis
    mmh3
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, docs/, build/, dist/

[isort]
line_length=120
