[metadata]
name = django-query-profiler
version = 0.9
description = Django query profiler
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/django-query-profiler/django-query-profiler
author = Yash Maheshwari, Glynn Morrison
author_email = yash.maheshwari@gmail.com, glynn@zenefits.com, django.query.profiler@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
    Intended Audience :: Developers

[options]
include_package_data = true
packages = find:
zip_safe = false
test_suite = runtests.run_tests
setup_requires =
  flake8
  isort
tests_require =
  flake8
  coverage
  fakeredis
install_requires =
    setuptools
    django
    ; This was causing problems with versions with all version of pythons with conflicting package
    ; issues.  Freezing the version because this version works
    mo-sql-parsing
    redis
    mmh3
    isort
    dataclasses; python_version < "3.7"
python_requires = >=3.6

;[options.packages.find]
;exclude =
;    tests

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, docs/, build/, dist/

[isort]
line_length=120
default_section = THIRDPARTY
known_first_party = django_query_profiler
known_third_party = django mmh3
multi_line_output = 5

[coverage:run]
include = django_query_profiler/*
omit = django_query_profiler/tests/*

[coverage:report]
omit =
    django_query_profiler/runtests.py
    django_query_profiler/tests/*
